package com.creepereye.ecommerce.domain.copurchase.dto;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class CoPurchaseResponseV1 {
    private final Integer productId;
}
