@startuml
package "공동 구매 (CoPurchase) 도메인" {

    class CoPurchase {
        - Long id
        - Product sourceProduct
        - Product targetProduct
        - Float score
    }

    interface CoPurchaseRepository {
        + findBySourceProductProductIdOrderByScoreDesc(Integer): List<CoPurchase>
    }

    class CoPurchaseService {
        + getRecommendationsV1(Integer): List<CoPurchaseResponseV1>
        + getRecommendationsV2(Integer): List<ProductSearch>
        + populateCoPurchaseData(): void
    }

    class CoPurchaseControllerV1 {
        + getRecommendations(Integer): List<CoPurchaseResponseV1>
    }
    class CoPurchaseControllerV2 {
        + getRecommendations(Integer): List<ProductSearch>
    }
    
    class CoPurchaseResponseV1 {
        - Integer productId
    }
    
    note right of CoPurchaseControllerV2
        반환 타입이 ProductSearch로,
        비정규화된 테이블의 데이터를 직접 사용함
    end note

    CoPurchaseControllerV1 --> CoPurchaseService
    CoPurchaseControllerV2 --> CoPurchaseService
    CoPurchaseService --> CoPurchaseRepository
    CoPurchaseService --> product.ProductSearchRepository
    CoPurchaseRepository ..> CoPurchase
    CoPurchaseService ..> CoPurchaseResponseV1
}

package "상품 (Product) 도메인" as product {
    class ProductSearchRepository
}

hide empty members
@enduml